fixed img paths

--- a/site/css/style_about.css
+++ b/site/css/style_about.css
@@ -53,7 +53,7 @@ body {
 
 .header {
 	height: 50px;
-	background-image:url(../banner.png);  /* <-- Change this url if needed */
+	background-image:url(img/banner.png);  /* <-- Change this url if needed */
 	color:#FFF; /* Colors are placeholders */
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size:20px;
@@ -75,6 +75,6 @@ body {
 	font-size:15px;
 	font-weight:bold;
 	padding: 15px;
-	background-image:url(../banner.png);   /* Colors are placeholders */
+	background-image:url(img/banner.png);   /* Colors are placeholders */
 	color:#FFF;
 }
