--- a/site/css/style_about.css
+++ b/site/css/style_about.css
@@ -1,46 +1,3 @@
-/* Standard cssReset file*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 /* Own cssCode */
 body {
 	background-color:#FFF; /* Colors are placeholders */
@@ -52,8 +9,9 @@ body {
 }
 
 .header {
-	background-image:url(../img/banner.png);  /* <-- Change this url if needed */
-	color:#FFF; /* Colors are placeholders */
+	height: 50px;
+	background-color:ecf0f1; 
+	color:#000; /* Colors are placeholders */
 	font-family:Georgia, "Times New Roman", Times, serif;
 	font-size:20px;
 	font-weight:bold;
@@ -67,10 +25,11 @@ body {
 }
 .header p, .header a {
 	float: left;
+	margin: 0;
 }
 .header a {
 	margin-left: 30px;
-	color:#FFF;
+	color:#000;
 	text-decoration:none;
 }
 .words {
@@ -79,14 +38,12 @@ body {
 	width: 900px;
 	color: #000; /* Colors are placeholders */
 	padding: 10px;
-	background-color:#ecf0f1; /* Colors are placeholders */
 	height: 600px;
 }
 .footer {
-	height: 15px;
 	font-size:15px;
 	font-weight:bold;
 	padding: 15px;
-	background-image:url(../img/banner.png);   /* <-- Change this url if needed */
-	color:#FFF;    /* Colors are placeholders */
+	background-color:ecf0f1;
+	color:#000;    /* Colors are placeholders */
 }
