Change all occurrences of 'keyword' to 'section', added separate 'keyword' field
TO-DO: Add keyword field, list of sections

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -3,7 +3,7 @@
 	Fix javascript - make simpler, one css style, one span
 */
 
-#keyword-span, #date-span, #number-span {
+#section-span, #date-span, #number-span {
 	display: none;
 	font: 300 2.25em Georgia, serif;
 }
