updated the about.html and it's respective .css file

--- a/site/css/style_about.css
+++ b/site/css/style_about.css
@@ -46,3 +46,6 @@ body {
 	background-color:ecf0f1;
 	color:#000;    /* Colors are placeholders */
 }
+.words a {
+	text-decoration:none;
+	color:#c0392b;}
