Structure of headlines/articles

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -28,7 +28,7 @@ $font-serif: Georgia, serif;
 
 /* Hacks */
 
-#keyword-span, #date-span, #number-span {
+#section-span, #date-span, #number-span {
 	display: none;
 	font: 400 2.25em $font-serif;
 }
