--- a/site/css/_normalize.scss
+++ b/site/css/_normalize.scss
@@ -1,4 +1,5 @@
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
+/* Just link to this file if you need to normalize web pages */
 
 /* ==========================================================================
    HTML5 display definitions
