--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -95,6 +95,14 @@ body {
 	}
 }
 
+article p {
+	font-size: .7em;
+	width: 85%;
+	-webkit-column-count: 2;
+	line-height: 1.3;
+	-webkit-column-gap: 3.5em;
+}
+
 @media screen and (max-width: 45em) {
 	body { font-size: 14px; }
 }
