--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -1,13 +1,11 @@
-// @import "normalize";
+@import "reset";
 
-
-$background: white;
 $text: #333;
 $blue: #3498db;
 $dark-blue: #2980b9;
 
-$font-sans: "Helvetica Neue", Arial, sans-serif;
-$font-serif: Georgia, serif;
+$font-sans: adelle-sans, Arial, sans-serif;
+$font-serif: adelle-sans, serif;
 
 
 @mixin reset-form {
@@ -17,21 +15,28 @@ $font-serif: Georgia, serif;
 	display: inline-block;
 	font: inherit;
 	outline: none;
+	vertical-align: baseline;
 	-moz-appearance: none;
 	-webkit-appearance: none;
 }
 
 
+.chromeframe {
+	margin: 0.2em 0;
+	background: #ccc;
+	color: #000;
+	padding: 0.2em 0;
+}
+
 #section-span, #date-span, #number-span {
 	display: none;
-	font: 400 2.4em $font-serif;
+	// font: 400 2.4em $font-serif;
 }
 
 
 body {
-	background-color: $background;
+	background-color: white;
 	color: $text;
-	-webkit-transition: color 0.2s;
 }
 
 .container {
@@ -41,64 +46,30 @@ body {
 }
 
 header {
-	font: 400 2.25em $font-serif;
-	line-height: 1.4em;
+	font: 700 36px "pragmatica-web", sans-serif;
 
-	select, input {
-		@include reset-form;
-		text-align: center;
-
-		&:hover {
-			// color: $dark-blue;
-			cursor: pointer;
-		}
-	}
-
-	input:hover {
-		cursor: text;
-	}
+	select, input { @include reset-form; }
+	select:hover { cursor: pointer; }
+	input:hover { cursor: text; }
 }
 
 .news ol {
-	font: 400 1.5em $font-sans;
-	line-height: 1.4em;
-	margin-top: 1.333em;
+	.headline {
+		font: 400 24px "pragmatica-web", sans-serif;
 
-	li {
-		padding-bottom: 0.75em;
-
-		.headline {
-
-		}
-
-		a {
-			color: $text;
-			text-decoration: none;
-
-			&.inactive {
-				color: #999;
-			}
-
-			&:hover {
-				color: $blue;
-				text-decoration: underline;
-			}
+		&:hover {
+			color: $blue;
+			cursor: pointer;
+			text-decoration: underline;
 		}
 	}
-}
 
-article p {
-	font-size: .7em;
-	width: 85%;
-	-webkit-column-count: 2;
-	line-height: 1.3;
-	-webkit-column-gap: 3.5em;
-}
-
-@media screen and (max-width: 45em) {
-	body { font-size: 14px; }
-}
-
-@media screen and (max-width: 30em) {
-	body { font-size: 12px; }
+	article {
+		p + a {
+			font-size: .7em;
+			width: 85%;
+			-webkit-column-count: 2;
+			line-height: 1.3;
+		}
+	}
 }
