--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -73,3 +73,29 @@ header {
 		}
 	}
 }
+
+.overlay {
+	background: rgba(0,0,0,0.1);
+	cursor: pointer;
+	display: none;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+article {
+	background: #fff;
+	bottom: 0;
+	font-size: 18px;
+	line-height: 1.333em;
+	padding: 4em 6em;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 30em;
+	z-index: 999;
+
+	box-shadow: 0 0 20px rgba(0,0,0,0.2);
+}
