--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -64,13 +64,13 @@ header {
 		$size: 1em;
 
 		width: $size;
-		position: absolute;
+		// position: absolute;
 
-		top: 50%;
-		margin-top: -($size / 2);
+		// top: 50%;
+		// margin-top: -($size / 2);
 
-		left: 50%;
-		margin-left: -($size / 2);
+		// left: 50%;
+		// margin-left: -($size / 2);
 	}
 
 	.headline {
