--- a/site/css/_reset.scss
+++ b/site/css/_reset.scss
@@ -1,3 +1,6 @@
+h1, h2 { font-weight: normal; font-size: 16px; }
+
+
 /*
 	HTML5 Reset :: style.css
 	----------------------------------------------------------
