background-color input

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -34,6 +34,7 @@ header {
 	line-height: 1.2em;
 
 	select, input {
+		background-color: white;
 		border: none;
 		border-bottom: 1px dashed $blue;
 		color: $blue;
