--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -106,6 +106,14 @@ header {
 
 	a {
 		color: #777;
+
+		&:hover {
+			color: $blue;
+		}
+	}
+
+	.read-more {
+		color: #777;
 		display: block;
 		margin-top: 0.75em;
 
