--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -2,7 +2,8 @@
 
 $text: #333;
 $blue: #3498db;
-$font: "pragmatica-web", "Helvetica Neue", Arial, sans-serif;
+$dark-blue: #2980b9;
+$font: "Helvetica Neue", Arial, sans-serif;
 
 
 .chromeframe {
@@ -14,37 +15,37 @@ $font: "pragmatica-web", "Helvetica Neue", Arial, sans-serif;
 
 .form-span {
 	display: none;
-	font: 700 2.25em $font;
+	font: 300 3em $font;
 }
 
 
 body {
-	background-color: #eee;
-	color: $text;
+	background-color: $dark-blue;
+	color: white;
 	font-size: 16px;
 }
 
 .container {
-	background-color: white;
+	background-color: $blue;
 
 	.inner {
 		margin: 0 auto;
-		max-width: 896px;
-		padding: 4em 2em;
+		max-width: 1076px;
+		padding: 4em 2em 2em 2em;
 	}
 }
 
 header {
 	h1 {
-		font: 700 2.25em $font;
-		line-height: 1.2em;
+		font: 300 3em $font;
+		line-height: 1em;
 	}
 
 	select, input {
-		background-color: white;
+		background: transparent;
 		border: none;
-		border-bottom: 1px dashed $blue;
-		color: $blue;
+		border-bottom: 1px dashed $dark-blue;
+		color: $dark-blue;
 		display: inline-block;
 		font: inherit;
 		line-height: inherit;
@@ -70,34 +71,44 @@ header {
 }
 
 .news {
-	color: #777;
-	margin-top: 1.5em;
+	// border-radius: 0.5em;
+	background-color: #f7f7f7;
+	width: 100%;
 	
 	ol {
-		font: 400 1.25em $font;
+		font: 300 1.25em $font;
 		list-style: none;
+		width: 100%;
 
 		li {
-			margin-bottom: 0.5em;
+			background-color: #f7f7f7;
+
+			.li-margin {
+				margin: 0 auto;
+				max-width: 1140px;
+			}
+		}
+		li:nth-child(even) {
+			background: #eee;
 		}
 	}
 
 	.headline {
-		color: $text;
+		color: #444;
 		cursor: pointer;
 		display: block;
 		font: 400 1.4em $font;
 		line-height: 1.2em;
-		padding: 0.2em 0;
+		padding: 0.6em 1.143em;
 
 		&:hover {
-			color: $blue;
+			color: #777;
 		}
 	}
 
 	article {
 		line-height: 1.5em;
-		margin: 0.5em 0 1em 0;
+		padding: 0.5em 1.6em 1em 1.6em;
 
 		div { margin-bottom: 0.25em; }
 
@@ -105,6 +116,7 @@ header {
 			color: #777;
 			line-height: 1.4em;
 			margin-bottom: 0.25em;
+			-webkit-column-count: 2;
 		}
 	}
 
@@ -137,18 +149,19 @@ header {
 }
 
 footer {
-	background-color: #eee;
-	color: #777;
-	font: 400 1.25em $font;
+	background-color: $dark-blue;
+	color: #fff;
+	font: 300 1.25em $font;
 
 	.inner {
 		margin: 0 auto;
-		max-width: 896px;
-		padding: 1em 2em;
+		max-width: 1076px;
+		// padding: 1em 2em;
+		padding: 2em 2em 4em 2em;
 	}
 
 	a {
-		color: #777;
+		color: #fff;
 
 		&:hover {
 			color: $blue;
