Javascript commenting, new clipping script

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -12,7 +12,7 @@ $font: "pragmatica-web", "Helvetica Neue", Arial, sans-serif;
 	padding: 0.2em 0;
 }
 
-.form-fix {
+.form-span {
 	display: none;
 	font: 700 2.25em $font;
 }
