--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -56,7 +56,7 @@ header {
 
 		&:focus {
 			// outline: 1px solid red;
-			border-bottom: 1px dashed #333;
+			// border-bottom: 1px dashed #333;
 		}
 	}
 
@@ -154,7 +154,7 @@ footer {
 		margin: 0 auto;
 		max-width: 1076px;
 		// padding: 1em 2em;
-		padding: 2em 2em 4em 2em;
+		padding: 1em 2em;
 	}
 
 	a {
