--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -56,7 +56,7 @@ header {
 
 		&:focus {
 			// outline: 1px solid red;
-			// border-bottom: 1px dashed #333;
+			// border-bottom: 1px dashed white;
 		}
 	}
 
@@ -91,7 +91,7 @@ header {
 	}
 
 	.headline {
-		color: #444;
+		color: #555;
 		cursor: pointer;
 		display: block;
 		font: 400 1.4em $font;
@@ -114,6 +114,8 @@ header {
 			line-height: 1.4em;
 			margin-bottom: 0.25em;
 			-webkit-column-count: 2;
+			-moz-column-count: 2;
+			column-count: 2;
 		}
 	}
 
@@ -179,5 +181,11 @@ footer {
 @media screen and (max-width: 480px) {
 	body {
 		font-size: 12px;
+	}
+
+	.news article p {
+		-webkit-column-count: 1;
+		-moz-column-count: 1;
+		column-count: 1;
 	}
 }
