Clicking full width of headline now opens article

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -89,7 +89,7 @@ header {
 	.headline {
 		color: #555;
 		cursor: pointer;
-		display: inline-block;
+		display: block;
 		font: 400 1.75em $font;
 		line-height: 1.2em;
 		padding: 0.75em 0;
