--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -45,6 +45,7 @@ header {
 		background: transparent;
 		border: none;
 		border-bottom: 1px dashed $dark-blue;
+		border-radius: 0;
 		color: $dark-blue;
 		display: inline-block;
 		font: inherit;
@@ -55,7 +56,7 @@ header {
 		-webkit-appearance: none;
 
 		&:focus {
-			// border-bottom-color
+			border-bottom: 1px solid $dark-blue;
 		}
 	}
 
@@ -95,6 +96,11 @@ header {
 		padding: 0.75em 0;
 
 		&.active, &:hover { color: $blue; }
+
+		&:focus {
+			color: $blue;
+			outline: none;
+		}
 	}
 
 	article {
