--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -25,6 +25,27 @@ body {
 	font-size: 16px;
 }
 
+#noscript {
+	z-index: 9999;
+	background-color: #dedede;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	opacity: .8;
+	box-sizing: border-box;
+	padding: 0 5%;
+
+	p {
+		position: relative;
+		top: 33.33333333%;
+		text-align: center;
+		font: 600 3.5em $font;
+		color: $dark-blue;
+		text-transform: uppercase;
+	}
+}
+
 header {
 	background-color: $blue;
 
